redesignedoj/files_usersubmissions/26/submission.txt
7_BUILDROADS_code.cpp:1:1: error: ‘package’ does not name a type
    1 | package main
      | ^~~~~~~
